Fix definition list toolbar alignment

--- a/src/rb-definition-list/rb-definition-list.css
+++ b/src/rb-definition-list/rb-definition-list.css
@@ -14,7 +14,7 @@
  */
 
 .DefinitionList-toolbar {
-    margin-bottom: 1.5em;
+    margin: 0 var(--layout-gutter) 1.5em;
 }
 
 .DefinitionList-main {
